@@ -232,6 +232,12 @@ New in spot 2.9.8.dev (not yet released)
     that error messages should be emitted as if the next automaton
     was read from "filename" starting on line 10.  (Issue #232)
 
+  - The automaton parser for HOA will now be faster at parsing files
+    where a label is used multiple times (i.e., most automata): it
+    uses a hash table to avoid reconstructing BDDs corresponding to
+    label that have already been parsed.  This trick was already used
+    in the never claim parser.
+
   - spot::twa_graph::merge_states() will now sort the vector of edges
     before attempting to detect mergeable states.  When merging states
     with identical outgoing transitions, it will now also consider
